# SteelTraining

./: .gitignore  CMakeLists.txt  Generate_GGJ2018.bat  Generate_Linux_Codeblocks_Makefiles.sh  README.md  StealTraining.project  SteelTraining.project  TemporaryDungeon.project  generate_vs2015.bat  generate_vs2017.bat  generate_vs2017_d3d11.bat  generate_vs2017_external.bat
Generic/Resources/Shaders/: Fonts.glfx  primitive_solid.fx  primitive_wire.fx  primitive_wire.glfx
Generic/Settings/: texture_resources.xml
Generic/Settings/EventSystem/: Steam.xml
Generic/Settings/EventSystem/Achievements/: achievements.xml  conditions.xml
Generic/Settings/EventSystem/Leaderboards/: definitions.xml
Generic/Settings/InputActions/: configuration.xml
Generic/Settings/RenderGraph/: render_graph_dx11.xml  render_graph_dx11_skybox.xml
cmake/: Master.cmake  TargetBuildSAAS.cmake  package.cmake
cmake/Modules/: FindShSDK.cmake  FindShSDKEditor.cmake  FindShSDK_Editor.cmake  FindXAudio.cmake
src/Extension/: CMakeLists.txt  Extension.configext  Extension.cpp  Extension.h  ExtensionST.configext  ExtensionST.cpp  ExtensionST.h
src/Game/: Application.cpp  Application.h  CMakeLists.txt  Game.cpp  Game.h  GameState.cpp  GameState.h  GameStateGame.cpp  GameStateGame.h  GameStateManager.cpp  GameStateManager.h  GameStateTitleMenu.cpp  GameStateTitleMenu.h  GameStateTitleMenuSettings.cpp  GameStateTitleMenuSettings.h  PauseMenu.cpp  PauseMenu.h  Settings.cpp  Settings.h  TitleMenu.cpp  TitleMenu.h  main.cpp
src/Plugins/: CMakeLists.txt
src/Plugins/Plugin/: CMakeLists.txt  Plugin.cpp  Plugin.h
src/Plugins/PluginMapGenerator/: CMakeLists.txt  PluginMapGenerator.cpp  PluginMapGenerator.h  PluginMapGeneratorFactory.cpp  PluginMapGeneratorFactory.h
src/Plugins/PluginMapGenerator/Map/: Map.cpp  Map.h  Map2D.cpp  Map2D.h
src/Plugins/PluginMapGenerator/MapEntity/: MapEntity.cpp  MapEntity.h  MapEntityWall.cpp  MapEntityWall.h
src/Plugins/PluginMapGenerator/MapGenerator/: MapGenerator.cpp  MapGenerator.h  MapGeneratorTest.cpp  MapGeneratorTest.h
src/Plugins/PluginST/: CMakeLists.txt  PluginFactory.cpp  PluginFactory.h  PluginST.cpp  PluginST.h
src/Plugins/PluginST/HUD/: HUD.cpp  HUD.h
src/Plugins/PluginST/World/: InputManager.cpp  InputManager.h  Object.cpp  Object.h  ShootFactory.cpp  ShootFactory.h  World.cpp  World.h
src/Plugins/PluginST/World/Character/: BaseCharacter.cpp  BaseCharacter.h  EnemyCharacter.cpp  EnemyCharacter.h  EnemyMeleeCharacter.cpp  EnemyMeleeCharacter.h  PlayerCharacter.cpp  PlayerCharacter.h  TeleportingEnemyMeleeCharacter.cpp  TeleportingEnemyMeleeCharacter.h
src/Plugins/PluginST/World/ContactListener/: ContactListener.cpp  ContactListener.h
src/Plugins/PluginST/World/Objects/: ObjectWall.cpp  ObjectWall.h
src/Plugins/PluginST/World/Projectile/: Projectile.cpp  Projectile.h  ProjectileManager.cpp  ProjectileManager.h
